<resources  xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="done">DONE</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="cancel">CANCEL</string>
    <string name="resume">RESUME</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="retry">Retry</string>
    <string name="minutes_short">m</string>
    <string name="hours_short">h</string>
    <string name="action_settings">Settings</string>
    <string name="settings_activity_title">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="subscription_card_displayName">Name</string>
    <string name="content_desc_twitchProfileBanner_imageView">The user\'s specified profile banner</string>
    <string name="content_desc_twitchLogo_imageView">Picture of the streamer\'s Twitch logo</string>
    <string name="no_elements_added_notice">No %s could be found</string>
    <string name="vods">Videos</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="title_activity_streamer_info">Channel</string>
    <string name="streamerInfo_desc_tab">Description</string>
    <string name="streamerInfo_broadcasts_tab">Broadcasts</string>
    <string name="streamerInfo_highlights_tab">Highlights</string>
    <string name="streamerInfo_chat_tab">Chat</string>
    <string name="streamerInfo_transition" translatable="false">streamerInfoPicTrans</string>
    <string name="streamerInfo_description">No description found</string>
    <string name="decorative_toolbar_position_y" translatable="false">DecoToolbarTranslationY</string>
    <string name="main_toolbar_position_y" translatable="false">MainToolbarTranslationY</string>
    <string name="menu_external">Use external player</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_sleep">Sleep timer</string>
    <string name="menu_share">Share</string>
    <string name="menu_options">Options</string>
    <string name="menu_playback">Playback Settings</string>
    <string name="options">Options</string>
    <string name="audio_only">Audio only</string>
    <string name="mute">Mute</string>
    <string name="chat_only">Chat only</string>
    <string name="available_qualities">Quality settings</string>
    <string name="quality_auto">Auto</string>
    <string name="stream_sleep_timer_stopped">Sleep timer stopped</string>
    <string name="stream_sleep_timer_started">Sleep timer started. Stream will be paused in %1$d hours and %2$d minutes.</string>
    <string name="stream_sleep_timer_started_minutes_only">Sleep timer started. Stream will be paused in %d minutes.</string>
    <string name="stream_fragment_tag" translatable="false">StreamFragmentTag</string>
    <string name="stream_fragment_streamerInfo" translatable="false">streamerInfoForIntent</string>
    <string name="stream_fragment_viewers" translatable="false">streamViewers</string>
    <string name="stream_fragment_start_time" translatable="false">streamRuntime</string>
    <string name="stream_fragment_autoplay" translatable="false">streamAutoPlay</string>
    <string name="stream_fragment_vod_id" translatable="false">stream_vod_id</string>
    <string name="stream_fragment_title" translatable="false">streamTitle</string>
    <string name="stream_preview_transition" translatable="false">SharedViewPreviewTransition</string>
    <string name="stream_preview_url" translatable="false">stream_image_preview</string>
    <string name="stream_shared_transition" translatable="false">stream_has_shared_transition</string>
    <string name="stream_preview_alpha" translatable="false">stream_image_alpha</string>
    <string name="stream_sleep_timer_title">Sleep timer</string>
    <string name="stream_seek_dialog_title">Seek to</string>
    <string name="stream_audio_only_active">Playing audio only</string>
    <string name="stream_fullscreen">Fullscreen</string>
    <string name="stream_viewers">Viewers</string>
    <string name="stream_show_chat">Show chat</string>
    <string name="stream_forward">Forward 10 seconds</string>
    <string name="stream_backward">Backward 10 seconds</string>
    <string name="playback_speed_display">×%.2f</string>
    <string name="playback_speed">%.2f</string>
    <string name="skip_silence">Skip Silence</string>
    <string name="vod_playback_failed">Failed to play VOD. Try another quality.</string>
    <string name="title_activity_vod">Video On Demand</string>
    <string name="intent_vod" translatable="false">intent_vod</string>
    <string name="vod_views">%,d views</string>
    <string name="font_roboto_regular" translatable="false">sans-serif</string>
    <string name="font_roboto_mono" translatable="false">monospace</string>
    <string name="font_roboto_medium" translatable="false">sans-serif-medium</string>
    <string name="font_roboto_light" translatable="false">sans-serif-light</string>
    <string name="card_style_minimal">Collapsed</string>
    <string name="card_style_normal">Normal</string>
    <string name="card_style_expanded">Expanded</string>
    <string name="card_size_small">Small</string>
    <string name="card_size_normal">Normal</string>
    <string name="card_size_large">Large</string>
    <string name="card_size_huge">MAX</string>
    <string name="default_stream_title">%1$s playing %2$s</string>
    <string name="preview_stream_title">Stream title</string>
    <string name="preview_stream_display_name">Name</string>
    <string name="preview_stream_game_and_viewers">1337 viewers - Game title</string>
    <string name="preview_stream_online_since">00:30:00</string>
    <string name="preview_game_title">Game title</string>
    <string name="preview_game_viewers">1337 viewers</string>
    <string name="top_games_activity_title" translatable="false">@string/navigation_drawer_top_games_title</string>
    <string name="error_external_playback_failed">Failed to send URL to external player</string>
    <string name="error_nothing_found">There\'s nothing here</string>
    <string name="no_server_response_message">Oops, Twitch\'s servers don\'t seem to be responding. Refresh?</string>
    <string name="my_channels_activity_title" translatable="false">@string/navigation_drawer_follows_title</string>
    <string name="my_channels_activity_label">Following</string>
    <string name="stream_playback_failed">Failed to play stream. Try another quality.</string>
    <string name="title_activity_live_stream">Live stream</string>
    <string name="chat_send_message_hint">Type message</string>
    <string name="chat_status_connecting">Connecting to Chat…</string>
    <string name="chat_status_connected">Ready to Chat</string>
    <string name="chat_status_reconnecting">Reconnecting…</string>
    <string name="chat_status_connection_failed">Connection Failed</string>
    <string name="chat_paused">Chat paused due to scroll.</string>
    <string name="channel_info_intent_object" translatable="false">STREAMERINFO_INTENT_OBJECT</string>
    <string name="my_streams_activity_title" translatable="false">@string/navigation_drawer_my_streams_title</string>
    <string name="my_streams_preview_image">Preview of the live channel</string>
    <string name="my_streams_cell_current_viewers">%,d viewers</string>
    <string name="top_streams_activity_title" translatable="false">@string/navigation_drawer_top_streams_title</string>
    <string name="featured_activity_title" translatable="false">@string/navigation_drawer_featured_title</string>
    <string name="intent_key_streamer_info" translatable="false">StreamerInfoIntent</string>
    <string name="intent_key_stream_viewers" translatable="false">StreamViewers</string>
    <string name="intent_key_stream_start_time" translatable="false">StreamStartTime</string>
    <string name="title_activity_welcome">Twire setup</string>
    <string name="welcome_text_line_one">Welcome to</string>
    <string name="welcome_text_line_two">Twire</string>
    <string name="title_activity_login" translatable="false">@string/title_activity_welcome</string>
    <string name="login_text_line_one">Let\'s get you set up!</string>
    <string name="login_text_line_two">First, sign into Twitch.</string>
    <string name="login_user_cancel">You need to log in to use Twire, though…</string>
    <string name="login_user_cancel_action">GOT IT</string>
    <string name="login_user_no_internet">You\'ll need an internet connection to set up Twire.</string>
    <string name="login_user_no_internet_action">TRY AGAIN</string>
    <string name="login_on_success_message">Hello, %s</string>
    <string name="login_intent_part_of_setup" translatable="false">login_intent_part_of_setup</string>
    <string name="login_intent_token_not_valid" translatable="false">login_intent_token_not_valid</string>
    <string name="login_invalid_token_text_line_one">Unfortunately you </string>
    <string name="login_invalid_token_text_line_two">have to log in again</string>
    <string name="skip_text">SKIP</string>
    <string name="confirm_text_line_one">Sit tight!</string>
    <string name="confirm_text_line_two">We just need to get your follows from Twitch.</string>
    <string name="settings_general_name">General</string>
    <string name="settings_general_name_summary">Twitch account, startup page</string>
    <string name="settings_general_image_proxy">Use an image proxy</string>
    <string name="settings_general_image_proxy_url_button">Save</string>
    <string name="settings_general_image_proxy_url_example">Example Proxy: https://external-content.duckduckgo.com/iu/?u=</string>
    <string name="settings_general_image_proxy_url_placeholder">API url</string>
    <string name="settings_stream_player_name">Stream player</string>
    <string name="settings_stream_player_summary">Current viewer count, player behavior</string>
    <string name="settings_appearance_name">Appearance</string>
    <string name="settings_appearance_summary">Theme, card style, card size</string>
    <string name="settings_chat_name">Twitch Chat</string>
    <string name="settings_chat_name_summary">Emote size, message size</string>
    <string name="gen_not_logged_in">Click to log in</string>
    <string name="gen_dialog_login_or_out_content">Do you want to log into a new account or log out as %s?</string>
    <string name="gen_dialog_login_or_out_login_action">LOG IN</string>
    <string name="gen_dialog_login_or_out_logout_action">LOG OUT</string>
    <string name="gen_twitch_name">Twitch username</string>
    <string name="gen_start_page">Startup page</string>
    <string name="gen_reset_tips">Reset tutorial tips</string>
    <string name="gen_tips_have_been_reset">Tutorial tips have been reset</string>
    <string name="gen_language_filter">Filter top streams by language</string>
    <string name="gen_open_changelog">Open changelog</string>
    <string name="gen_dialog_wipe_follows_content">Do you want to wipe all follows?</string>
    <string name="gen_dialog_wipe_follows_action">Wipe</string>
    <string name="navigation_drawer_featured_title">Featured streams</string>
    <string name="navigation_drawer_my_streams_title">My streams</string>
    <string name="navigation_drawer_top_streams_title">Top streams</string>
    <string name="navigation_drawer_follows_title">Followed streamers</string>
    <string name="navigation_drawer_top_games_title">Top games</string>
    <string name="navigation_drawer_search_title">Search</string>
    <string name="navigation_drawer_settings_title">Settings</string>
    <string name="chat_message_option_mention">Mention</string>
    <string name="chat_message_option_duplicate">Duplicate message</string>
    <string name="chat_message_option_block">Block</string>
</resources>