<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_vod_stream"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="?attr/mainCardBackgroundColor"
    app:cardCornerRadius="@dimen/stream_card_corner_radius"
    app:cardElevation="@dimen/stream_card_elevation"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        >
        <RelativeLayout
            android:id="@+id/preview_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.sebastianrask.bettersubscription.views.DynamicImageView
                android:id="@+id/image_stream_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/my_streams_preview_image"
                />

            <SeekBar
                android:background="@null"
                android:layout_marginTop="-8dp"
                android:visibility="invisible"
                android:id="@+id/progressBar"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/image_stream_preview"
                android:layout_marginBottom="@dimen/stream_devider_height"
                android:layout_marginStart="@dimen/stream_display_name_margin"
                android:layout_marginLeft="@dimen/stream_display_name_margin"
                android:maxLines="2"
                android:textAppearance="@style/text_title_w_shadow"
                android:textColor="@color/white"
                android:text=""
                />

            <TextView
                android:id="@+id/displayName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/timestamp"
                android:layout_marginBottom="@dimen/stream_devider_height_small"
                android:layout_marginStart="@dimen/stream_display_name_margin"
                android:layout_marginLeft="@dimen/stream_display_name_margin"
                android:maxLines="1"
                android:textAppearance="@style/text_title_w_shadow"
                android:textColor="@color/white"
                android:text="@string/preview_stream_display_name"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/stream_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/stream_card_top_margin"
            android:layout_marginRight="@dimen/stream_card_top_margin"
            android:paddingLeft="@dimen/title_padding"
            android:paddingRight="@dimen/title_padding"
            android:layout_gravity="center_horizontal"
            android:maxLines = "2"
            android:minLines = "1"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/stream_title_margin_top"
            android:text="@string/preview_stream_title"
            android:textAppearance="@style/cardPrimaryText"
            />

        <!-- Shared Padding -->
        <View
            android:id="@+id/shared_padding"
            android:layout_width="match_parent"
            android:layout_height="@dimen/stream_devider_height"/>

        <TextView
            android:id="@+id/stream_game_and_viewers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|bottom"
            android:gravity="center_horizontal|bottom"
            android:textAppearance="@style/cardSecondaryText"
            android:singleLine="true"
            android:text="@string/preview_stream_game_and_viewers"
            android:paddingBottom="@dimen/stream_devider_height"
            android:paddingLeft="@dimen/stream_devider_height"
            android:paddingRight="@dimen/stream_devider_height"
            android:paddingTop="0dp"
            />

    </LinearLayout>

</android.support.v7.widget.CardView>
